# fastapi-book-api

./: .gitignore  Dockerfile  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_main.py
