[tool.poetry]
name = "fastapi-book-api"
version = "0.1.0"
description = "FastAPI Book API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.1"
uvicorn = "^0.35.0"
aiosqlite = "^0.21.0"
sqlalchemy = "^2.0.30"
httpx = "^0.27.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "1.10.15"
python-dotenv = "^1.1.1"
greenlet = "^3.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
